apps/nginx/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-k8s-app
  labels:
    name: aws-k8s-app
