apps/nginx/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
  - name: metrics
    port: 9113
    targetPort: metrics
  type: ClusterIP
